# OpenHMD-Chat

./: Cargo.toml  README.md  nohup.out
assets/lua/: test.lua
assets/models/: player.mtl  scene.mtl
assets/models/scene/: scene.mtl
assets/models/wooden_box/: wooden_box.mtl
openhmd-chat-server/: Cargo.toml
openhmd-chat-server/assets/lua/: controls.lua  events.lua  init.lua  physic_test.lua  test.lua
openhmd-chat-server/src/: main.rs
openhmd-chat-server/src/audio/: mod.rs
openhmd-chat-server/src/game/: collider_builder.rs  gameobject.rs  mod.rs  player.rs  raycasting.rs
openhmd-chat-server/src/network/: mod.rs
openhmd-chat-server/src/scripting_engine/: mod.rs  std_lib.rs
openhmd-chat-server/src/support/: mod.rs
src/: main.rs
src/audio/: mod.rs
src/game/: controls.rs  gameobject.rs  mod.rs  settings.rs
src/gameplay/: controls.rs  mod.rs
src/math/: mod.rs
src/network/: client_params.rs  mod.rs
src/openhmd/: mod.rs
src/player/: mod.rs
src/render/: camera.rs  default_shaders.rs  draw.rs  draw_display.rs  mesh.rs  mod.rs  model.rs  ohmd_params.rs  window.rs
src/scripting_engine/: mod.rs
src/support/: file_writer.rs  map_loader.rs  mod.rs  obj_loader.rs  obj_model_loader.rs  shader_loader.rs  texture_loader.rs  timer.rs
src/ui/: lua_ui.rs  mod.rs
src/vr_gui/: mod.rs
