[package]
name = "openhmd-chat"
version = "0.2.0"
authors = ["TheHellBox <thehellbox11@gmail.com>"]

[dependencies]
glium="0.20.0"
openhmd-rs="0.1.5"
tobj="0.1.6"
image = "0.18.0"
nalgebra="0.14.1"
nphysics3d="0.7.2"
cobalt = "0.22.0"
bytevec="0.2.0"
rand="0.4.2"
alto="3.0.1"
gilrs="0.6.0"
opus="0.2.0"
json="0.11.13"
