[package]
name = "openhmd-chat"
version = "0.1.0"
authors = ["TheHellBox <hellboxstudio@yandex.ru>"]

[dependencies]
openhmd-rs="*"
alto="3.0.1"
cobalt="*"
opus="*"
serde="1.0"
serde_derive = "1.0"
bincode="1.0"
clap="*"
glium="0.21.0"
tobj="*"
image="*"
nalgebra="0.15"
conrod={ version = "0.60.0", features = ["glium", "winit"] }
