[package]
name = "openhmd-chat-server"
version = "0.1.0"
authors = ["TheHellBox <hellboxstudio@yandex.ru>"]

[dependencies]
cobalt="*"
serde="1.0"
serde_derive = "1.0"
bincode="1.0"
alga="0.6"
nalgebra={ version = "0.16", features = ["serde-serialize"] }
hlua="0.4"
time="*"
rand="*"
lazy_static = "1.1.0"
nphysics3d = "0.9"
ncollide3d = "0.17.1"
